--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"cd client && npm start\" \"cd server && npm start\""
+    "start": "concurrently \"cd client && npm start\" \"cd server && npm start\"",
+    "install": "concurrently npm install \"cd client && npm install\" \"cd server && npm install\""
   },
   "author": "",
   "license": "ISC",
